--- a/env.example
+++ b/env.example
@@ -1,2 +1,3 @@
 OPENAI_API_KEY=your_openai_key_here
 TAVILY_API_KEY=your_tavily_key_here
+REDIS_URL=redis://default:1Yyucr7QcxaIRCDnwrXGVyWVdpYwfgig@redis-13531.c250.eu-central-1-1.ec2.redns.redis-cloud.com:13531 (provided)
